k3s/caddy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy
  namespace: devops
spec:
  selector:
    app: caddy
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
